# image-sculptor

./: .gitignore  CMakeLists.txt  Makefile  sculptor  sculptor-perf  sculptor.c  sculptor.h
bench/: benchmark.cpp
include/: computations.hpp  seam.hpp
src/: computations.cpp  main.cpp  seam.cpp
tests/: computations_test.cpp  seam_test.cpp  tests.cpp
